--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webmvc'
     implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.1'
     implementation 'commons-validator:commons-validator:1.10.0'
+    implementation 'com.github.gavlyukovskiy:datasource-proxy-spring-boot-starter:2.0.0'
     implementation 'io.hypersistence:hypersistence-utils-hibernate-71:3.12.0'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
