--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,7 @@
+logging:
+  level:
+    net.ttddyy.dsproxy.listener: DEBUG
+
 spring:
   application:
     name: ordering
@@ -10,4 +14,4 @@ spring:
     hibernate:
       ddl-auto: update
     open-in-view: false
-    show-sql: true
+    show-sql: false
