--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,3 +1,7 @@
+logging:
+  level:
+    net.ttddyy.dsproxy.listener: DEBUG
+
 spring:
   application:
     name: ordering
@@ -10,7 +14,7 @@ spring:
     hibernate:
       ddl-auto: update
     open-in-view: false
-    show-sql: true
+    show-sql: false
   test:
     database:
       replace: none
