Update `application-test.yaml` with new application name and datasource password.
Renamed `spring.application.name` to `ordering-test` and updated the datasource password for test configuration consistency.

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -4,11 +4,11 @@ logging:
 
 spring:
   application:
-    name: ordering
+    name: ordering-test
   datasource:
     url: jdbc:h2:mem:ordering-test;DATABASE_TO_LOWER=true;CASE_INSENSITIVE_IDENTIFIERS=true;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
     username: sa
-    password: '123'
+    password: password
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
