Add integration with Rapidex for shipping cost calculation
Implemented a new infrastructure to integrate with the Rapidex API, determining delivery costs and estimated delivery dates. Updated application configurations, added necessary client implementations, and replaced the fake origin and shipping services with condition-based providers. Added WireMock support and integration tests for validation.

--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,14 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-restclient'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-webmvc'
     implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.1'
     implementation 'commons-validator:commons-validator:1.10.0'
     implementation 'com.github.gavlyukovskiy:datasource-proxy-spring-boot-starter:2.0.0'
     implementation 'io.hypersistence:hypersistence-utils-hibernate-71:3.14.1'
+    implementation 'org.apache.httpcomponents.client5:httpclient5'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
@@ -43,6 +45,7 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
     testImplementation 'com.github.jsqlparser:jsqlparser:5.3'
