--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'idea'
     id 'java'
-    id 'org.springframework.boot' version '4.0.1'
+    id 'org.springframework.boot' version '4.0.2'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'org.springframework.cloud.contract' version '5.0.0'
 }
@@ -96,7 +96,7 @@ compileJava {
 }
 
 contracts {
-    packageWithBaseClasses = 'br.dev.allissonnunes.algashop.ordering.presentation'
+    packageWithBaseClasses = 'br.dev.allissonnunes.algashop.ordering.contract.base'
 }
 
 tasks.named('contractTest') {
