Integrate product catalog API client
- Introduced `ProductCatalogClient` to interact with the external product catalog API.
- Added `ProductCatalogAPIService` to implement `ProductCatalogService` for retrieving product details.
- Configured HTTP service client with `ProductCatalogClientConfiguration`.
- Updated `OrderControllerIT` and `ShippingCostServiceIT` to use WireMock for simulating product catalog API responses.
- Replaced `FakeProductCatalogService` with the new API client and updated test resources accordingly.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,8 @@ spring:
       imperative:
         factory: http_components
     serviceclient:
+      product-catalog:
+        base-url: http://localhost:8082
       rapidex:
         base-url: http://localhost:8081
   jpa:
