--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -15,6 +15,8 @@ spring:
       imperative:
         factory: http_components
     serviceclient:
+      product-catalog:
+        base-url: ${wiremock.server.baseUrl}
       rapidex:
         base-url: ${wiremock.server.baseUrl}
   jpa:
