Set fixed locale to en_US in microservices configs
Added `locale-resolver` and `locale` properties under the `spring.web` section for Product Catalog, Billing, and Ordering services. This ensures consistent localization behavior across all microservices by setting the default locale to `en_US`.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,6 +26,9 @@ spring:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
     open-in-view: false
     show-sql: false
+  web:
+    locale-resolver: fixed
+    locale: en_US
 
 algashop:
   integrations:
