Refactor `OrderControllerIT` with database cleanup and validation updates
- Added `DataJpaCleanUpExtension` for database cleanup between tests.
- Updated `initializeDatabase` logic to simplify setup.
- Changed HTTP response validation for `422 UNPROCESSABLE_ENTITY` scenario.
- Modified `ddl-auto` to `create-drop` in test configurations for schema management.

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -21,7 +21,7 @@ spring:
         base-url: ${wiremock.server.baseUrl}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
       naming:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
     open-in-view: false
