--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,5 +32,7 @@ spring:
 
 algashop:
   integrations:
+    product-catalog:
+      provider: PRODUCT_CATALOG
     shipping:
       provider: RAPIDEX
