--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,22 +6,24 @@ spring:
   application:
     name: ordering
   datasource:
-    url: jdbc:h2:file:~/ordering;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password: password
-    driver-class-name: org.h2.Driver
+    url: jdbc:postgresql://localhost:5432/ordering
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+  flyway:
+    enabled: true
   http:
     clients:
       imperative:
         factory: http_components
     serviceclient:
       product-catalog:
-        base-url: http://localhost:8082
+        base-url: http://localhost:8081
       rapidex:
         base-url: http://localhost:8081
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
       naming:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
     open-in-view: false
