--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -6,10 +6,16 @@ spring:
   application:
     name: ordering-test
   datasource:
-    url: jdbc:h2:mem:ordering-test;DATABASE_TO_LOWER=true;CASE_INSENSITIVE_IDENTIFIERS=true;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
-    username: sa
-    password: password
-    driver-class-name: org.h2.Driver
+    url: jdbc:postgresql://localhost:5432/ordering_test
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 3000
+      maximum-pool-size: 10
+      minimum-idle: 1
+  flyway:
+    enabled: true
   http:
     clients:
       imperative:
@@ -21,7 +27,7 @@ spring:
         base-url: ${wiremock.server.baseUrl}
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
       naming:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
     open-in-view: false
