Extract shared test container setup into `AbstractApplicationIT`
- Introduced `AbstractApplicationIT` to centralize shared configuration for integration tests, including Testcontainers setup.
- Updated existing test classes to extend `AbstractApplicationIT` for consistency and code reuse.
- Added dependencies for Testcontainers PostgreSQL and JUnit integration in `build.gradle`.

--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
     testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
     testImplementation 'com.github.jsqlparser:jsqlparser:5.3'
@@ -78,6 +79,8 @@ dependencies {
     testImplementation 'io.rest-assured:spring-mock-mvc:6.0.0'
     testImplementation 'net.datafaker:datafaker:2.5.3'
     testImplementation "org.mapstruct.extensions.spring:mapstruct-spring-test-extensions:${mapstructSpringExtensionsVersion}"
+    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
+    testImplementation 'org.testcontainers:testcontainers-postgresql'
     testImplementation 'org.wiremock.integrations:wiremock-spring-boot:4.0.8'
     testRuntimeOnly 'com.h2database:h2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
